--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/glob": "^7.1.3",
     "@types/node": "^15.0.2",
     "@types/prompt": "^1.1.0",
+    "@types/prompts": "^2.0.14",
     "@types/yargs": "^16.0.1",
     "path-parse": "^1.0.7",
     "tslint": "^6.1.3",
@@ -32,7 +33,7 @@
   "dependencies": {
     "chokidar": "^3.5.1",
     "glob": "^7.1.6",
-    "prompt": "^1.3.0",
+    "prompts": "^2.4.2",
     "rxjs": "^7.0.0",
     "yargs": "^17.0.1"
   }
